--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
