--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
+    "json-server": "^0.14.0",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
